src/scss/main.scss
@import url('https://fonts.googleapis.com/css?family=Roboto:300&display=swap');
@import 'variables';
@import 'helpers';
@import 'animations';

/*****************************
*          General
*****************************/
body {
  font: {
    family: 'Roboto', sans-serif;
  }
;
  color: $white;
  width: 100vw;
  height: 100vh;
  background: rgba(0, 0, 0, 1);
}

#particlesJS {
  z-index: -1;
  position: fixed;
  top: 0;
  width: 100vw;
  height: 100vh
}

/*****************************
*           Navbar
*****************************/
.navbar {
  background-color: $transparent !important;
  height: 80px;
  z-index: 1001;

  a.navbar-brand {
    color: #fff !important;
  }

  a.nav-link {
    padding: 10px 20px !important;
    margin: 0 10px;
    transition: color 0.2s;

    &:hover {
      color: $light-gray !important;
    }

  }

  .nav-item.active {

    a {
      color: $light-gray !important;
    }

  }

  .btn-download {
    border-radius: 25px;
    position: relative;
    top: 5px;
    background: transparent;
    color: $white;
    border: 2px solid $white;
    outline: 0;
    padding: 5px 20px;

    &:hover {
      box-shadow: 0 1px 10px 5px #222;
    }
  }

  .mobile-menu-indicator {
    position: fixed;
    right: 30px;
    width: 50px;
    height: 50px;
    display: flex;
    flex-flow: column wrap;
    cursor: pointer;
    z-index: 1001;

    hr {
      border: 1px solid $light-gray;
      border-radius: 14px;
      width: 80%;
      float: left;
      background-color: $light-gray;
      height: 1px;
      margin: 0;
    }

    hr:nth-child(1),
    hr:nth-child(3) {
      position: absolute;
      -webkit-transition: transform 0.5s, width 0.5s, position 0.5s;
      -moz-transition: transform 0.5s, width 0.5s, position 0.5s;
      -o-transition: transform 0.5s, width 0.5s, position 0.5s;
      transition: transform 0.5s, width 0.5s, position 0.5s;
    }

    hr:nth-child(2) {
      position: absolute;
      -webkit-transition: right 0.5s;
      -moz-transition: right 0.5s;
      -o-transition: right 0.5s;
      transition: right 0.5s;
    }

    hr:nth-child(1) {
      top: 15px;
      right: 0;
    }

    hr:nth-child(2) {
      top: 25px;
      right: 10%;
      width: 60%;
    }

    hr:nth-child(3) {
      top: 35px;
      right: 0;
    }
  }

}

/*****************************
*           Main
*****************************/
.main-content {
  @media screen and (max-width: 576px) {
    margin-bottom: 50px;
  }

  @media screen and (min-width: 577px) {
    margin-bottom: 100px;
  }
}

.motto-box {
  @media screen and (min-width: 992px) {
    position: fixed;
    bottom: 100px;
    right: 60px;
    width: 40% !important;
  }
}

.motto-box .header img {
  width: 30px;
  height: 30px;;
}

.progress {
  margin: 10px;
  height: 3px;
}

.left-arrow,
.right-arrow {
  cursor: pointer;
}

/*****************************
*       Contact form
*****************************/
.contact-form {

  .form-group {

    &.col-12 {
      padding: 0;
      margin-bottom: -15px;
    }

    .form-control {
      background: $transparent-gary;
      color: $white;
      border: 0;
    }

    .form-control:focus {
      border-color: $white;
      outline: 0;
      box-shadow: 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(100, 100, 100, .6);
    }

    textarea {
      resize: none;
    }

  }

  .btn.btn-primary {
    border: none;
    border-radius: 20px;
    padding: 5px 20px;
    background: $dark-gray;
  }

  a {
    text-decoration: none;
    position: relative;
    top: 5px;
    color: $light-gray !important;
  }

}

/*****************************
*       Meet The Team
*****************************/
.member-card {
  border: 1px solid rgba(190, 190, 190, 0.1);
  border-radius: 10px;
  box-shadow: 0 3px 35px -19px rgba(179, 179, 179, 0.9);
  transition: box-shadow 0.5s;
  cursor: pointer;

  &:hover {
    box-shadow: 0 3px 35px -15px rgba(179, 179, 179, 0.9);
  }

  .profile-image {
    width: 60px;
    height: 60px;
    top: 8px;
    border-radius: 50%;
  }

  .text {
    top: 15px;
  }

  .member-link {

    img {
      width: 20px;
      height: 20px;
      margin: 0 8px;
      border-radius: 50%;
      cursor: pointer;
    }

  }
}

/*****************************
*        Mobile menu
*****************************/
.mobile-menu {
  position: fixed;
  top: 70px;
  height: calc(100vh);
  z-index: 1000;
  background: transparent;

  ul {
    margin-top: 40%;

    li {
      &.active {
        a {
          color: $light-gray !important;
        }
      }

      a {
        color: #707070 !important;
        transition: color 0.2s;
        font-size: 25px;

        &:hover {
          color: $light-gray;
        }
      }

      .btn-download {
        border-radius: 25px;
        position: relative;
        font-size: 18px;
        top: 5px;
        background: transparent;
        color: $white !important;
        border: 2px solid $white;
        outline: 0;
        padding: 5px 20px;
        margin-top: 17px;

        &:hover {
          box-shadow: 0 1px 10px 5px #222;
        }

        &.btn.btn-primary:focus,
        &.btn.btn-primary:active,
        &.btn.btn-primary:hover {
          background: transparent;
          outline: none;
        }
      }
    }
  }
}


/**************************
*        Scrollbar
**************************/
.scrollbar {
  float: left;
  overflow-y: hidden;
  overflow-x: hidden;
}

#style-3::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
}

#style-3::-webkit-scrollbar {
  width: 6px;
}

#style-3::-webkit-scrollbar-thumb {
  background-color: #000000;
}

